# mtarcommon

./: .travis.yml  CMakeLists.txt  COPYING  allocator.cpp  allocator.hpp  appveyor.yml  atomic.hpp  defs.hpp  noncopyable.hpp  parallel_for.cpp  parallel_for.hpp  path.cpp  path.hpp  stream.cpp  stream.hpp  string.hpp  thread.cpp  thread.hpp
test/: CMakeLists.txt  tAllocator.cpp  tParallelFor.cpp  tPath.cpp  tStream.cpp  tString.cpp  tWstring.cpp
